# django-configurations

./: .bandit  .coveragerc  .fussyfox.yml  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES.rst  CODEOWNERS  LICENSE  MANIFEST.in  Makefile  README.rst  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitecustomize.py  tasks.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: release.yml  test.yml
configurations/: __init__.py  __main__.py  asgi.py  autosetup.py  base.py  decorators.py  django_stubs_compat.py  error_handling.py  errors.py  example_generators.py  fastcgi.py  importer.py  management.py  mypy_plugin.py  sphinx.py  utils.py  values.py  version.py  wsgi.py
configurations/tests/: test_inheritance.py  test_main.py  test_values.py
configurations/tests/settings/: base.py  main.py  mixin_inheritance.py  multiple_inheritance.py  multiple_inheritance2.py  single_inheritance.py
docs/: Makefile  changes.rst  conf.py  cookbook.rst  index.rst  make.bat  mypy.rst  patterns.rst  requirements.txt  values.rst
project_name/: settings.py  wsgi.py
requirements/: tests.txt
test_project/: .env  manage.py
test_project/test_project/: settings.py  urls.py  wsgi.py
tests/: requirements.txt  setup_test.py  test_cli.py  test_env.py  test_error.py  test_error_handling.py  test_example_generators.py  test_inheritance.py  test_main.py  test_prefix_decorator.py  test_sphinx.py  test_values.py  urls.py
tests/docs/: conf.py  index.rst
tests/management/commands/: old_optparse_command.py
tests/settings/: base.py  dot_env.py  dot_env_dict.py  dot_env_not_required.py  error.py  main.py  mixin_inheritance.py  multiple_inheritance.py  prefix_decorator.py  single_inheritance.py
