[metadata]
name = django-configurations
version = 0.4
author = Jannis Leidel
author-email = jannis@leidel.info
summary = A helper for organizing Django settings.
description-file = README.rst
license = BSD
home-page = http://django-configurations.readthedocs.org/
project-url =
    Github, https://github.com/jezdez/django-configurations/
classifier =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Topic :: Utilities

[files]
packages =
    configurations
    configurations.tests
    configurations.tests.settings
extra_files =
    README.rst
    CHANGES.rst
    AUTHORS
    .travis.yml
    manage.py
    tasks.py
    requirements/tests.txt

[backwards_compat]
zip_safe = false

[wheel]
universal = 1
